--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,12 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+# S
 #
 default: &default
 
   adapter: mysql2
   encoding: utf8
-  database: c9
-  username: <%=ENV['C9_USER']%>
-  host: <%=ENV['IP']%>
+  database: wedding
+  username: root
+  host: localhost
 #   adapter: sqlite3
 #   pool: 5
 #   timeout: 5000
@@ -24,8 +20,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  #database: db/test.sqlite3
+  
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  
