--- a/config/database.yml
+++ b/config/database.yml
@@ -28,11 +28,13 @@ production:
   url:  <%= ENV["DATABASE_URL"] %>
   pool: <%= ENV["DB_POOL"] || ENV['RAILS_MAX_THREADS'] || 5 %>
 
+ 
   adapter: mysql2
+  host: localhost
   encoding: utf8
-  database: minnesu5_mnofficiants
   username:  minnesu5_FMP
   password:  MN!#Wed13
+  database: minnesu5_mnofficiants
   timeout: 5000
   #port: 3306
   #database: minnesu5_mnofficiants
