updates to gems and herokut stack

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,10 @@ default: &default
   adapter: postgresql
   encoding: unicode
   database: wedding
+  encoding: unicode
   username: allan
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  #pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 #   timeout: 5000
 
 
