--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@ default: &default
   database: wedding
   encoding: unicode
   username: allan
+  password: coco
   host: localhost
   #pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 #   timeout: 5000
