--- a/package.json
+++ b/package.json
@@ -8,3 +8,13 @@
     "webpack-dev-server": "^3.11.2"
   }
 }
+
+{
+  "name": "joyfulunion",
+  "author": "alindgren",
+  "email": "alindgren@minnesotaofficiants.com",
+  "license": "MNO",
+  "version": "0.0.1",
+  "private": true,
+  ...
+}
