added fix to package.json

--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "email": "alindgren@minnesotaofficiants.com",
   "license": "MNO",
   "version": "0.0.1",
-  "private": true,
+  "private": true
 }
