--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "engines": {
     "node": "12.21.0",
-    "yarn": "1.22.10"
+    "yarn": "1.22.4"
   },
 
   "scripts":{
-    "yarn run v1.22.4"
-
+    "dev": "yarn run test",
+    "yarn": "yarn run webpack"
   },
+
+  
 
 
 
